# t_machine

./: CMakeLists.txt
headers/: t_command.h  t_core.h  t_iterator.h  t_message.h  t_tape.h
lib4aio/lib4aio_c_headers/utils/error_utils/: error_utils.h
lib4aio/lib4aio_c_headers/utils/file_utils/: file_utils.h
lib4aio/lib4aio_c_headers/utils/log_utils/: log_utils.h
lib4aio/lib4aio_c_headers/utils/memory_utils/: memory_utils.h
lib4aio/lib4aio_c_headers/utils/str_builder/: str_builder.h
lib4aio/lib4aio_c_headers/utils/str_hook/: str_hook.h
lib4aio/lib4aio_c_headers/utils/string_utils/: common.h
lib4aio/lib4aio_c_headers/utils/struct_list/: struct_list.h
lib4aio/lib4aio_c_sources/utils/error_utils/: error_utils.c
lib4aio/lib4aio_c_sources/utils/file_utils/: file_utils.c
lib4aio/lib4aio_c_sources/utils/log_utils/: log_utils.c
lib4aio/lib4aio_c_sources/utils/memory_utis/: memory_utils.c
lib4aio/lib4aio_c_sources/utils/str_builder/: str_builder.c
lib4aio/lib4aio_c_sources/utils/str_hook/: str_hook.c  str_hook_split.c
lib4aio/lib4aio_c_sources/utils/string_utils/: common.c
lib4aio/lib4aio_c_sources/utils/struct_list/: struct_list.c
main/: main.c
sources/: t_command.c  t_core.c  t_iterator.c  t_message.c  t_tape.c
test/: cmd.txt  input.txt  output.txt
